--- a/JJ40.css
+++ b/JJ40.css
@@ -1,9 +1,14 @@
 body {
-	background-image: url("../images/JJKevin.JPG");
+    background-image: url("../images/JJKevin.JPG");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     max-width: 1440px;
+}
+
+button {
+    font-size: 16px;
+    font-family: Comic Sans MS;
 }
 
 .memory {
@@ -28,6 +33,7 @@ body {
     top: 50%;
     color: black;
     background-color: white;
+    font-family: Comic Sans MS;
 }
 
 #birthday {
